name:          kryptoradio-core
version:       0.0.1
synopsis:      Kryptoradio broadcast and receive tools for Linux
description:   Contains tools for broadcasting and receiving KryptoRadio stream
               under Linux. Contains HTTP and Unix socket interfaces.
category:      Utils
license:       AGPL-3
license-file:  LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-broadcast
  hs-source-dirs: haskell
  c-sources:      c/serial.c
  main-is:        Kryptoradio/Core/Broadcaster.hs
  build-depends:
    base >= 4.2.0.2,
    blaze-builder >= 0.3.1.0,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.9.5,
    http-types >= 0.8.3,
    stm >= 2.3,
    text >= 0.11.2.0,
    unix >= 2.5.1.0,
    wai >= 3.0.1.1,
    warp >= 3.0.0.5

executable kryptoradio-exchange
  hs-source-dirs: haskell
  main-is:        Kryptoradio/Exchange/Book.hs
  ghc-options:    -threaded 
  build-depends:
    aeson >= 0.7.0.3,
    base >= 4.2.0.2,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.10.6,
    containers >= 0.4.2.1,
    curl >= 1.3.7,
    curl-aeson >= 0.0.4,
    scientific >= 0.2.0.2,
    time >= 1.4,
    websockets >= 0.8.1.1

executable kryptoradio-receiver
  hs-source-dirs: haskell
  c-sources:      c/dvblib/dvblib.c
  main-is:        Kryptoradio/Receiver/Main.hs
  build-depends:
    base >= 4.2.0.2,
    csv >= 0.1.2,
    attoparsec >= 0.10.4.0,
    attoparsec-binary >= 0.2,
    wai >= 3.0.1.1,
    warp >= 3.0.0.5
