name:          kryptoradio-core
version:       0.0.1
synopsis:      Kryptoradio broadcast and receive tools for Linux
description:   Contains tools for broadcasting and receiving KryptoRadio stream
               under Linux. Contains HTTP and Unix socket interfaces.
category:      Utils
license:       AGPL-3
license-file:  ../LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-broadcast
  hs-source-dirs: src
  main-is:        Broadcaster.hs
  build-depends:
    base >= 4.2.0.2,
    bytestring >= 0.10.0.2,
    conduit >= 1.0.13,
    http-types >= 0.8.3,
    stm >= 2.4.2,
    text >= 0.11.3.1,
    time >= 1.4.0.1,
    transformers >= 0.3.0.0,
    wai >= 1.4.0.2,
    warp >= 1.3.9
