name:          kryptoradio-encoder
version:       0.0.1
synopsis:      Kryptoradio broadcasting tool for Linux
description:   Contains tools for broadcasting Kryptoradio stream
               under Linux and feeding it to DVB encoder. Contains HTTP
	       interface for incoming Kryptoradio packets.
category:      Utils
license:       AGPL-3
license-file:  ../LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-encoder
  c-sources:      serial.c
  main-is:        Main.hs
  build-depends:
    base >= 4.2.0.2,
    blaze-builder >= 0.3.1.0,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.9.5,
    directory >= 1.1.0.2,
    network >= 2.3.0.13,
    stm >= 2.3,
    text >= 0.11.2.0,
    unix >= 2.5.1.0
