name:          kryptoradio-internet
version:       0.0.1
synopsis:      Kryptoradio Internet Gateway
description:   Reads standard input and sends incoming data to TCP connections.
	       Useful in piping dvbsnoop output to Internet.
category:      Utils
license:       AGPL-3
license-file:  ../LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-internet
  main-is:        Main.hs
  build-depends:
    base >= 4.5.0.0,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.9.5,
    conduit >= 1.0.13,
    conduit-extra >= 1.1.3,
    stm >= 2.4,
    transformers >= 0.3.0.0
