name:          kryptoradio-receiver
version:       0.0.1
synopsis:      Kryptoradio receiving tool for Linux
description:   Contains tools for receiving Kryptoradio stream
               under Linux. Contains HTTP server which provides RESTFul
	       interfaces.
category:      Utils
license:       AGPL-3
license-file:  ../LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-receiver
  c-sources:      dvblib/dvblib.c
  main-is:        Main.hs
  build-depends:
    aeson >= 0.7.0.3,
    attoparsec >= 0.10.4.0,
    attoparsec-binary >= 0.2,
    base >= 4.2.0.2,
    blaze-builder >= 0.3.1.0,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.9.5,
    csv >= 0.1.2,
    http-types >= 0.8.3,
    stm >= 2.3,
    text >= 0.11.2.0,
    unix >= 2.5.1.0,
    wai >= 3.0.1.1,
    warp >= 3.0.0.5
