name:          kryptoradio-exchange
version:       0.0.1
synopsis:      Kryptoradio exchange data source
description:   Contains tools for receiving currency exchange data and order
	       book. Supports BitPay and Bitstamp. Communicates with
	       Kryptoradio Encoder.
category:      Utils
license:       AGPL-3
license-file:  ../../LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-exchange
  main-is:        Main.hs
  ghc-options:    -threaded 
  build-depends:
    aeson >= 0.7.0.3,
    base >= 4.2.0.2,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.10.6,
    containers >= 0.4.2.1,
    curl >= 1.3.7,
    curl-aeson >= 0.0.4,
    scientific >= 0.2.0.2,
    stm >= 2.3,
    text >= 0.11.2.0,
    time >= 1.4,
    websockets >= 0.8.1.1
