name:          kryptoradio-encoder
version:       0.0.1
synopsis:      Kryptoradio streaming tool for textual data
description:   Contains tools for broadcasting textual content to 
	       Kryptoradio encoder.
category:      Utils
license:       AGPL-3
license-file:  ../../LICENSE
author:        Joel Lehtonen
maintainer:    joel.lehtonen@koodilehto.fi
build-type:    Simple
cabal-version: >= 1.2
source-repository head
  type: git
  location: git://github.com/koodilehto/kryptoradio.git

executable kryptoradio-streaming
  main-is:        Main.hs
  ghc-options:    -threaded 
  build-depends:
    base >= 4.2.0.2,
    bytestring >= 0.9.2.1,
    cmdargs >= 0.10.6,
    curl >= 1.3.7,
    stm >= 2.3
